fixed prime date not showing up

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -161,8 +161,8 @@ a {
     position: fixed; /* Fixed/sticky position */
     bottom: 40px;
     right: 60px;
-    height: 160px;
-    width: 160px;
+    height: 140px;
+    width: 140px;
     z-index: 99;
     border: none;
     outline: none;
@@ -171,7 +171,7 @@ a {
     cursor: pointer;
     padding: 15px;
     border-radius: 80px;
-    font-size: 100px; /* Increase font size */
+    font-size: 80px; /* Increase font size */
 }
 
 #date {
